@@ -49,18 +49,22 @@
 
       postProcessIframe(instance);
 
-      // Opera 9.5 - 10a throws a security error when calling Array#map or
-      // String#lastIndexOf on sandboxed natives created on the file:// protocol.
-      //
-      // Opera 9.5 - 9.64 will error by simply calling the methods.
-      // Opera 10 will error when first accessing the contentDocument of
-      // another iframe and then accessing the methods.
       return (function() {
-        var div, errored, toString = instance.Object().toString;
-        if (toString.call(instance.Array().map) === '[object Function]') {
-          // trash can
-          div = doc.createElement('div');
+        var errored, div = doc.createElement('div'),
+         toString = instance.Object().toString;
 
+        // Safari does not support sandboxed natives from iframes :(
+        if (instance.Array().constructor === Array) {
+          // move first iframe to trash
+          errored = !!div.appendChild(cache.pop());
+        }
+        // Opera 9.5 - 10a throws a security error when calling Array#map or
+        // String#lastIndexOf on sandboxed natives created on the file:// protocol.
+        //
+        // Opera 9.5 - 9.64 will error by simply calling the methods.
+        // Opera 10 will error when first accessing the contentDocument of
+        // another iframe and then accessing the methods.
+        else if (toString.call(instance.Array().map) === '[object Function]') {
           // create and remove second iframe
           postProcessIframe(createSandbox());
 
@@ -68,14 +72,14 @@
           try {
             instance.Array().map(NOOP);
           } catch (e) {
-            // remove second iframe
-            div.appendChild(cache.pop());
-            IS_MAP_CORRUPT = errored = true;
+            // move iframe to trash
+            IS_MAP_CORRUPT = errored = !!div.appendChild(cache.pop());
           }
-          // remove first iframe
+          // move other iframe to trash
           div.appendChild(cache.pop());
-          div.innerHTML = '';
         }
+
+        div.innerHTML = '';
         return errored ? Fusebox(instance) : instance;
       })();
     },
@@ -90,7 +94,7 @@
     },
 
     createSandbox = function() {
-      var xdoc, iframe, name, parentNode, result;
+      var iframe, key, name, parentNode, result, xdoc;
 
       switch (MODE) {
         case PROTO_MODE: return global;
@@ -114,6 +118,7 @@
           return xdoc.parentWindow;
 
         case IFRAME_MODE:
+          key = '/* fuse_iframe_cache_fix: ' + fuse.version + ' */';
           name = expando + counter++;
           parentNode = doc.body || doc.documentElement;
 
@@ -123,13 +128,24 @@
           } catch(e) {
             (iframe = doc.createElement('iframe')).name = name;
           }
-          iframe.style.display = 'none';
-          parentNode.insertBefore(iframe, parentNode.firstChild);
 
-          // IE / Opera 9.25 throw security errors when trying to write to an iframe
-          // after the document.domain is set. Also Opera < 9 doesn't support
-          // inserting an iframe into the document.documentElement.
           try {
+            // Detect caching bug in Firefox 3.5+
+            // A side effect is that Firefox will use the __proto__ technique
+            // when served from the file:// protocol as well
+            if ('MozOpacity' in doc.documentElement.style &&
+                isHostType(global, 'sessionStorage') &&
+                !global.sessionStorage[key]) {
+              global.sessionStorage[key] = 1;
+              throw new Error;
+            }
+
+            // IE / Opera 9.25 throw security errors when trying to write to an iframe
+            // after the document.domain is set. Also Opera < 9 doesn't support
+            // inserting an iframe into the document.documentElement.
+            iframe.style.display = 'none';
+            parentNode.insertBefore(iframe, parentNode.firstChild);
+
             result = global.frames[name];
             (xdoc = result.document).open();
             xdoc.write(
@@ -140,18 +156,11 @@
               // the iframe will persist its `src` property so we check if our
               // iframe has a src property and load it if found.
               '<script>var g=this,c=function(s){' +
-              'if(g.parent.document.readyState!="complete"){' +
               '(s=g.frameElement.src)&&g.location.replace(s);' +
-              'g.setTimeout(c,10)}};' +
+              'if(g.parent.document.readyState!="complete"){g.setTimeout(c,10)}};' +
               'c()<\/script>');
 
             xdoc.close();
-
-            // Safari does not support sandboxed natives from iframes :(
-            if (result.Array().constructor === Array) {
-              parentNode.removeChild(iframe);
-              throw new TypeError;
-            }
             cache.push(iframe);
             return result;
           }
